--- a/class-resources/class-directory/index.html
+++ b/class-resources/class-directory/index.html
@@ -4,6 +4,9 @@
   <title>Root</title>
 </head>
 <body>
+  <a href="/">Home</a>
+  <a href="css-basics.html">CSS Basics</a>
+  
     <h1>Hello World</h1>
     <img src="./assets/images/boston-terrier-puppy.jpg" alt="boston terrier puppy laying down"/>
 </body>
