adding advanced CSS files

--- a/class-resources/class-directory/css-basics.html
+++ b/class-resources/class-directory/css-basics.html
@@ -36,6 +36,9 @@
 
   <div class="fun-box">
     demo for CSS classes
+    <p>
+      This should do something
+    </p>
   </div>
 
   <div class="fun-box small">
